k8s/infrastructure/base/addons/authelia/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: authelia
  namespace: authelia
  annotations:
   cert-manager.io/issuer: "letsencrypt-traefik"
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`${autheliaAuthDomain}`)
      services:
        - name: authelia 
          port: 80
  tls:
    certResolver: default
